test added how the generator works with allready existing files